// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component should render a Card without elevation 1`] = `
<View
  elevation={false}
  radius={true}
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 4,
      },
      false,
    ]
  }
  testID="elevationID"
  type="base"
>
  <Text>
    Card
  </Text>
</View>
`;

exports[`Card component should render a Card without rounded corners 1`] = `
<View
  elevation={true}
  radius={false}
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 0,
      },
      Object {
        "elevation": 1,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.14,
        "shadowRadius": 1,
      },
    ]
  }
  testID="radiusID"
  type="base"
>
  <Text>
    Card
  </Text>
</View>
`;
